--- a/ML_Model.ipynb
+++ b/ML_Model.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "794293c2",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "8f517e65",
    "metadata": {},
    "outputs": [],
@@ -62,17 +62,20 @@
     "#gets day of week as number\n",
     "matches[\"day_code\"] = matches[\"date\"].dt.dayofweek\n",
     "\n",
-    "#sets numeric value for wins losses and draws\n",
-    "matches[\"target\"] = matches[\"result\"].apply(result)\n",
+    "WLD = True #Set True for WLD or False for W L/D predictions\n",
     "\n",
-    "#sets wins to 1 and losses and draws to 0\n",
-    "# matches[\"target\"] = (matches[\"result\"]=='W').astype(\"int\")\n",
+    "if(WLD):\n",
+    "    #sets numeric value for wins losses and draws\n",
+    "    matches[\"target\"] = matches[\"result\"].apply(result)\n",
+    "else:\n",
+    "    #sets wins to 1 and losses and draws to 0\n",
+    "    matches[\"target\"] = (matches[\"result\"]=='W').astype(\"int\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "3aaca33c",
    "metadata": {},
    "outputs": [],
@@ -101,19 +104,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "ee7cd4d7",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.4371069182389937"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4371069182389937\n"
+     ]
     }
    ],
    "source": [
@@ -124,14 +124,17 @@
     "combined = pd.DataFrame(dict(actual = test[\"target\"], prediction = preds))\n",
     "pd.crosstab(index = combined[\"actual\"], columns = combined[\"prediction\"])\n",
     "\n",
-    "#accuracy of predicting a win\n",
-    "precision_score(test[\"target\"], preds, average = \"micro\")\n",
-    "# precision_score(test[\"target\"], preds)"
+    "if(WLD):\n",
+    "    #accuracy of predicting a win\n",
+    "    accuracy = precision_score(test[\"target\"], preds, average = \"micro\")\n",
+    "else:\n",
+    "    accuracy = precision_score(test[\"target\"], preds)\n",
+    "print(accuracy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "e550fe6a",
    "metadata": {},
    "outputs": [],
@@ -167,32 +170,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "ddbae980",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Predictions 2.0 for W, D/L\n",
-    "\n",
-    "def make_predictions(data, predictors):\n",
-    "    train = data[data[\"date\"] < '2024-06-20']\n",
-    "    test = data[data[\"date\"] > '2024-06-20']\n",
-    "    rf.fit(train[predictors], train[\"target\"])\n",
-    "    preds = rf.predict(test[predictors])\n",
-    "    combined = pd.DataFrame(dict(actual = test[\"target\"], predicted = preds), index = test.index)\n",
-    "    precision = precision_score(test[\"target\"], preds)\n",
-    "    return combined, precision\n",
-    "\n",
-    "combined, precision = make_predictions(matches_rolling, predictors + new_cols)\n",
-    "\n",
-    "combined = combined.merge(matches_rolling[[\"date\", \"team\", \"opponent\", \"result\"]], left_index = True, right_index = True)\n",
-    "precision"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "3f1dafa9",
    "metadata": {},
    "outputs": [
     {
@@ -201,13 +180,13 @@
        "0.45396825396825397"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Predictions 3.0 for W, L, D\n",
+    "#Predictions 2.0/3.0 for W, D/L or WLD\n",
     "\n",
     "def make_predictions(data, predictors):\n",
     "    train = data[data[\"date\"] < '2024-06-20']\n",
@@ -215,7 +194,10 @@
     "    rf.fit(train[predictors], train[\"target\"])\n",
     "    preds = rf.predict(test[predictors])\n",
     "    combined = pd.DataFrame(dict(actual = test[\"target\"], predicted = preds), index = test.index)\n",
-    "    precision = precision_score(test[\"target\"], preds, average = \"micro\")\n",
+    "    if(WLD):\n",
+    "        precision = precision_score(test[\"target\"], preds, average = \"micro\")\n",
+    "    else:\n",
+    "        precision = precision_score(test[\"target\"], preds)\n",
     "    return combined, precision\n",
     "\n",
     "combined, precision = make_predictions(matches_rolling, predictors + new_cols)\n",
